# backend/cmd/server/main.go
@@ -108,33 +108,33 @@ func registerAuthRoutes(r chi.Router, q *db.Queries) {
 func registerBlipsRoutes(r chi.Router, q *db.Queries) {
 	r.Get("/blips", loggingMiddleware(handlers.GetAllBlips(q)))
 	r.Get("/blips/{id}", loggingMiddleware(handlers.GetBlip(q)))
-	r.Put("/blips/{id}", loggingMiddleware(handlers.UpdateBlip(q)))
-	r.Delete("/blips/{id}", loggingMiddleware(handlers.DeleteBlip(q)))
+	r.Put("/blips/{id}", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.UpdateBlip(q)))))
+	r.Delete("/blips/{id}", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.DeleteBlip(q)))))
 }
 
 func registerTechnologiesRoutes(r chi.Router, q *db.Queries) {
 	r.Get("/technologies", loggingMiddleware(handlers.GetAllTechnologies(q)))
-	r.Post("/technologies", loggingMiddleware(handlers.CreateTechnology(q)))
+	r.Post("/technologies", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.CreateTechnology(q)))))
 	r.Get("/technologies/{id}", loggingMiddleware(handlers.GetTechnology(q)))
 	r.Get("/technologies/by-name/{name}", loggingMiddleware(handlers.GetTechnologyByName(q)))
 	r.Get("/technologies/by-quadrant/{quadrant_id}", loggingMiddleware(handlers.GetTechnologiesByQuadrant(q)))
-	r.Put("/technologies/{id}", loggingMiddleware(handlers.UpdateTechnology(q)))
-	r.Delete("/technologies/{id}", loggingMiddleware(handlers.DeleteTechnology(q)))
+	r.Put("/technologies/{id}", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.UpdateTechnology(q)))))
+	r.Delete("/technologies/{id}", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.DeleteTechnology(q)))))
 }
 
 func registerUsersRoutes(r chi.Router, q *db.Queries) {
-	r.Get("/users", loggingMiddleware(handlers.GetAllUsers(q)))
-	r.Post("/users", loggingMiddleware(handlers.CreateUser(q)))
-	r.Get("/users/{id}", loggingMiddleware(handlers.GetUser(q)))
-	r.Get("/users/by-email/{email}", loggingMiddleware(handlers.GetUserByEmail(q)))
-	r.Put("/users/{id}", loggingMiddleware(handlers.UpdateUser(q)))
-	r.Delete("/users/{id}", loggingMiddleware(handlers.DeleteUser(q)))
+	r.Get("/users", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.GetAllUsers(q)))))
+	r.Post("/users", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.CreateUser(q)))))
+	r.Get("/users/{id}", loggingMiddleware(AuthMiddleware(handlers.GetUser(q))))
+	r.Get("/users/by-email/{email}", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.GetUserByEmail(q)))))
+	r.Put("/users/{id}", loggingMiddleware(AuthMiddleware(handlers.UpdateUser(q))))
+	r.Delete("/users/{id}", loggingMiddleware(AuthMiddleware(AdminMiddleware(handlers.DeleteUser(q)))))
 }
 
 func registerUserTechnologiesRoutes(r chi.Router, q *db.Queries) {
-	r.Post("/user-technologies", loggingMiddleware(handlers.CreateUserTechnology(q)))
-	r.Get("/user-technologies/{id}", loggingMiddleware(handlers.GetUserTechnology(q)))
-	r.Get("/user-technologies/user/{user_id}", loggingMiddleware(handlers.GetUserTechnologiesByUser(q)))
-	r.Put("/user-technologies/{id}", loggingMiddleware(handlers.UpdateUserTechnology(q)))
-	r.Delete("/user-technologies/{id}", loggingMiddleware(handlers.DeleteUserTechnology(q)))
+	r.Post("/user-technologies", loggingMiddleware(AuthMiddleware(handlers.CreateUserTechnology(q))))
+	r.Get("/user-technologies/{id}", loggingMiddleware(AuthMiddleware(handlers.GetUserTechnology(q))))
+	r.Get("/user-technologies/user/{user_id}", loggingMiddleware(AuthMiddleware(handlers.GetUserTechnologiesByUser(q))))
+	r.Put("/user-technologies/{id}", loggingMiddleware(AuthMiddleware(handlers.UpdateUserTechnology(q))))
+	r.Delete("/user-technologies/{id}", loggingMiddleware(AuthMiddleware(handlers.DeleteUserTechnology(q))))
 }
